--- a/cad_source/components/zobjectinspector/samples/objinspbasic/objinspbasic.lpi
+++ b/cad_source/components/zobjectinspector/samples/objinspbasic/objinspbasic.lpi
@@ -28,13 +28,16 @@
         <Mode0 Name="default"/>
       </Modes>
     </RunParams>
-    <RequiredPackages Count="2">
+    <RequiredPackages Count="3">
       <Item1>
-        <PackageName Value="zobjectinspector"/>
+        <PackageName Value="zunits"/>
       </Item1>
       <Item2>
-        <PackageName Value="LCL"/>
+        <PackageName Value="zobjectinspector"/>
       </Item2>
+      <Item3>
+        <PackageName Value="LCL"/>
+      </Item3>
     </RequiredPackages>
     <Units Count="2">
       <Unit0>
