--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,9 @@
 [submodule "cad_source/components/zmath"]
 	path = cad_source/components/zmath
 	url = https://github.com/zamtmn/zmath.git
+[submodule "cad_source/components/zbaseutils"]
+	path = cad_source/components/zbaseutils
+	url = https://github.com/zamtmn/zbaseutils.git
+[submodule "cad_source/components/zbaseutilsgui"]
+	path = cad_source/components/zbaseutilsgui
+	url = https://github.com/zamtmn/zbaseutilsgui.git
