--- a/cad_source/simplecad/simplecad.lpi
+++ b/cad_source/simplecad/simplecad.lpi
@@ -37,19 +37,19 @@
     </RunParams>
     <RequiredPackages Count="7">
       <Item1>
-        <PackageName Value="zreaders"/>
+        <PackageName Value="zunits"/>
       </Item1>
       <Item2>
-        <PackageName Value="zbaseutils"/>
+        <PackageName Value="zreaders"/>
       </Item2>
       <Item3>
-        <PackageName Value="zmath"/>
+        <PackageName Value="zbaseutils"/>
       </Item3>
       <Item4>
-        <PackageName Value="zcontainers"/>
+        <PackageName Value="zmath"/>
       </Item4>
       <Item5>
-        <PackageName Value="zebase"/>
+        <PackageName Value="zcontainers"/>
       </Item5>
       <Item6>
         <PackageName Value="LazOpenGLContext"/>
@@ -58,11 +58,11 @@
         <PackageName Value="LCL"/>
       </Item7>
     </RequiredPackages>
-    <Units Count="329">
+    <Units Count="334">
       <Unit0>
         <Filename Value="simplecad.lpr"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="4"/>
         <CursorPos X="7" Y="11"/>
         <UsageCount Value="201"/>
         <Loaded Value="True"/>
@@ -74,8 +74,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <IsVisibleTab Value="True"/>
-        <TopLine Value="6"/>
-        <CursorPos X="19" Y="18"/>
+        <TopLine Value="663"/>
+        <CursorPos X="113" Y="678"/>
         <UsageCount Value="201"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -2164,7 +2164,7 @@
       </Unit309>
       <Unit310>
         <Filename Value="..\zengine\fonts\uzefontmanager.pas"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="10"/>
         <UsageCount Value="10"/>
         <Loaded Value="True"/>
       </Unit310>
@@ -2177,14 +2177,15 @@
       </Unit311>
       <Unit312>
         <Filename Value="..\zengine\core\drawings\uzedrawingdef.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="3"/>
-        <CursorPos X="21" Y="22"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="9"/>
+        <CursorPos Y="24"/>
         <UsageCount Value="10"/>
+        <Loaded Value="True"/>
       </Unit312>
       <Unit313>
         <Filename Value="..\zengine\core\uzeentitiesmanager.pas"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="20"/>
         <TopLine Value="5"/>
         <CursorPos X="6" Y="25"/>
         <UsageCount Value="10"/>
@@ -2192,17 +2193,16 @@
       </Unit313>
       <Unit314>
         <Filename Value="..\components\zebase\uzbtypes.pas"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="260"/>
         <CursorPos Y="259"/>
         <UsageCount Value="10"/>
-        <Loaded Value="True"/>
       </Unit314>
       <Unit315>
         <Filename Value="..\zengine\fileformats\uzeffdxf.pas"/>
-        <EditorIndex Value="15"/>
-        <TopLine Value="34"/>
-        <CursorPos X="11" Y="56"/>
+        <EditorIndex Value="16"/>
+        <TopLine Value="45"/>
+        <CursorPos X="10" Y="60"/>
         <UsageCount Value="10"/>
         <Loaded Value="True"/>
       </Unit315>
@@ -2215,7 +2215,7 @@
       </Unit316>
       <Unit317>
         <Filename Value="..\zengine\core\entities\uzeent3dface.pas"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="15"/>
         <TopLine Value="10"/>
         <CursorPos X="18" Y="18"/>
         <UsageCount Value="10"/>
@@ -2223,7 +2223,8 @@
       </Unit317>
       <Unit318>
         <Filename Value="..\zengine\core\entities\uzeentspline.pas"/>
-        <EditorIndex Value="10"/>
+        <UnitName Value="uzeEntSpline"/>
+        <EditorIndex Value="12"/>
         <TopLine Value="15"/>
         <CursorPos X="18" Y="39"/>
         <UsageCount Value="10"/>
@@ -2232,15 +2233,14 @@
       <Unit319>
         <Filename Value="..\components\zcontainers\gzctnrvector.pas"/>
         <UnitName Value="gzctnrVector"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="92"/>
         <CursorPos X="18" Y="111"/>
         <UsageCount Value="10"/>
-        <Loaded Value="True"/>
       </Unit319>
       <Unit320>
         <Filename Value="..\zengine\containers\UGDBPoint3DArray.pas"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="14"/>
         <TopLine Value="8"/>
         <CursorPos Y="28"/>
         <UsageCount Value="10"/>
@@ -2248,7 +2248,7 @@
       </Unit320>
       <Unit321>
         <Filename Value="..\zengine\core\entities\uzeentcurve.pas"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="13"/>
         <TopLine Value="13"/>
         <CursorPos X="18" Y="33"/>
         <UsageCount Value="10"/>
@@ -2256,7 +2256,7 @@
       </Unit321>
       <Unit322>
         <Filename Value="..\zengine\misc\uzeparser.pas"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="10"/>
         <CursorPos X="15" Y="30"/>
         <UsageCount Value="10"/>
@@ -2265,13 +2265,12 @@
       <Unit323>
         <Filename Value="..\components\zbaseutils\uzbhandles.pas"/>
         <UnitName Value="uzbHandles"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="-1"/>
         <UsageCount Value="10"/>
-        <Loaded Value="True"/>
       </Unit323>
       <Unit324>
         <Filename Value="..\zengine\fileformats\uzeffmanager.pas"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="19"/>
         <TopLine Value="35"/>
         <CursorPos X="19" Y="57"/>
         <UsageCount Value="10"/>
@@ -2279,15 +2278,15 @@
       </Unit324>
       <Unit325>
         <Filename Value="..\zengine\fileformats\uzeffdxfsupport.pas"/>
-        <EditorIndex Value="5"/>
-        <TopLine Value="16"/>
-        <CursorPos X="3" Y="25"/>
+        <EditorIndex Value="8"/>
+        <TopLine Value="284"/>
+        <CursorPos X="26" Y="294"/>
         <UsageCount Value="10"/>
         <Loaded Value="True"/>
       </Unit325>
       <Unit326>
         <Filename Value="..\zengine\core\entities\uzeenttext.pas"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="7"/>
         <TopLine Value="43"/>
         <CursorPos Y="247"/>
         <UsageCount Value="10"/>
@@ -2295,138 +2294,180 @@
       </Unit326>
       <Unit327>
         <Filename Value="..\zengine\fonts\uzefontshx.pas"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="5"/>
         <UsageCount Value="10"/>
         <Loaded Value="True"/>
       </Unit327>
       <Unit328>
         <Filename Value="..\zengine\fonts\uzefontfileformatshx.pas"/>
         <UnitName Value="uzeFontFileFormatSHX"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="6"/>
         <CursorPos X="26" Y="19"/>
         <UsageCount Value="10"/>
         <Loaded Value="True"/>
       </Unit328>
+      <Unit329>
+        <Filename Value="..\zengine\core\drawings\uzedrawingsimple.pas"/>
+        <EditorIndex Value="1"/>
+        <TopLine Value="13"/>
+        <CursorPos X="26" Y="28"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit329>
+      <Unit330>
+        <Filename Value="..\components\zunits\src\uzbunits.pas"/>
+        <UnitName Value="uzbUnits"/>
+        <EditorIndex Value="2"/>
+        <CursorPos X="6" Y="19"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit330>
+      <Unit331>
+        <Filename Value="..\zcad\commands\uzccommand_copyclip.pas"/>
+        <UnitName Value="uzcCommand_CopyClip"/>
+        <EditorIndex Value="18"/>
+        <TopLine Value="49"/>
+        <CursorPos X="60" Y="65"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit331>
+      <Unit332>
+        <Filename Value="..\zcad\commands\uzccommand_saveas.pas"/>
+        <EditorIndex Value="17"/>
+        <TopLine Value="39"/>
+        <CursorPos X="26" Y="55"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit332>
+      <Unit333>
+        <Filename Value="Y:\ppsrc\rtl\inc\systemh.inc"/>
+        <EditorIndex Value="9"/>
+        <TopLine Value="671"/>
+        <CursorPos X="3" Y="686"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit333>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="umainform.pas"/>
-        <Caret Line="163" Column="32" TopLine="152"/>
+        <Caret Line="189" Column="60" TopLine="169"/>
       </Position1>
       <Position2>
         <Filename Value="umainform.pas"/>
-        <Caret Line="165" Column="32" TopLine="154"/>
+        <Caret Line="31" Column="12" TopLine="8"/>
       </Position2>
       <Position3>
         <Filename Value="umainform.pas"/>
-        <Caret Line="328" TopLine="316"/>
+        <Caret Line="233" Column="50" TopLine="24"/>
       </Position3>
       <Position4>
         <Filename Value="umainform.pas"/>
-        <Caret Line="327" Column="46" TopLine="314"/>
+        <Caret Line="229" Column="61" TopLine="214"/>
       </Position4>
       <Position5>
         <Filename Value="umainform.pas"/>
-        <Caret Line="22" Column="15" TopLine="6"/>
+        <Caret Line="242" Column="61" TopLine="227"/>
       </Position5>
       <Position6>
         <Filename Value="umainform.pas"/>
-        <Caret Line="319" Column="22" TopLine="307"/>
+        <Caret Line="229" Column="71" TopLine="227"/>
       </Position6>
       <Position7>
         <Filename Value="umainform.pas"/>
-        <Caret Line="331" Column="18" TopLine="311"/>
+        <Caret Line="252" Column="20" TopLine="237"/>
       </Position7>
       <Position8>
         <Filename Value="umainform.pas"/>
-        <Caret Line="335" TopLine="311"/>
+        <Caret Line="275" Column="43" TopLine="261"/>
       </Position8>
       <Position9>
         <Filename Value="umainform.pas"/>
-        <Caret Line="336" TopLine="311"/>
+        <Caret Line="292" Column="16" TopLine="277"/>
       </Position9>
       <Position10>
         <Filename Value="umainform.pas"/>
-        <Caret Line="337" TopLine="311"/>
+        <Caret Line="321" Column="43" TopLine="306"/>
       </Position10>
       <Position11>
         <Filename Value="umainform.pas"/>
-        <Caret Line="338" TopLine="311"/>
+        <Caret Line="340" Column="17" TopLine="325"/>
       </Position11>
       <Position12>
         <Filename Value="umainform.pas"/>
-        <Caret Line="331" Column="24" TopLine="311"/>
+        <Caret Line="366" Column="46" TopLine="352"/>
       </Position12>
       <Position13>
         <Filename Value="umainform.pas"/>
-        <Caret Line="338" TopLine="311"/>
+        <Caret Line="396" Column="17" TopLine="380"/>
       </Position13>
       <Position14>
         <Filename Value="umainform.pas"/>
-        <Caret Line="329" Column="18" TopLine="311"/>
+        <Caret Line="417" Column="46" TopLine="403"/>
       </Position14>
       <Position15>
         <Filename Value="umainform.pas"/>
-        <Caret Line="342" Column="33" TopLine="311"/>
+        <Caret Line="481" Column="17" TopLine="466"/>
       </Position15>
       <Position16>
-        <Filename Value="..\zengine\fonts\uzefontmanager.pas"/>
-        <Caret Line="20" Column="2"/>
+        <Filename Value="umainform.pas"/>
+        <Caret Line="494" Column="46" TopLine="480"/>
       </Position16>
       <Position17>
-        <Filename Value="..\zengine\misc\uzeparser.pas"/>
-        <Caret Line="30" Column="15" TopLine="10"/>
+        <Filename Value="umainform.pas"/>
+        <Caret Line="510" Column="17" TopLine="495"/>
       </Position17>
       <Position18>
         <Filename Value="umainform.pas"/>
-        <Caret Line="659" Column="43" TopLine="637"/>
+        <Caret Line="529" Column="46" TopLine="515"/>
       </Position18>
       <Position19>
         <Filename Value="umainform.pas"/>
-        <Caret Line="22" Column="16" TopLine="2"/>
+        <Caret Line="558" Column="46" TopLine="544"/>
       </Position19>
       <Position20>
         <Filename Value="umainform.pas"/>
-        <Caret Line="660" Column="129" TopLine="638"/>
+        <Caret Line="614" Column="17" TopLine="599"/>
       </Position20>
       <Position21>
         <Filename Value="umainform.pas"/>
-        <Caret Line="661" TopLine="638"/>
+        <Caret Line="643" Column="46" TopLine="628"/>
       </Position21>
       <Position22>
         <Filename Value="umainform.pas"/>
-        <Caret Line="660" TopLine="638"/>
+        <Caret Line="678" Column="5" TopLine="663"/>
       </Position22>
       <Position23>
         <Filename Value="umainform.pas"/>
-        <Caret Line="662" TopLine="639"/>
+        <Caret Line="679" Column="32" TopLine="663"/>
       </Position23>
       <Position24>
         <Filename Value="umainform.pas"/>
-        <Caret Line="15" Column="18" TopLine="6"/>
+        <Caret Line="678" Column="110" TopLine="663"/>
       </Position24>
       <Position25>
-        <Filename Value="..\zengine\fonts\uzefontmanager.pas"/>
+        <Filename Value="..\zengine\fileformats\uzeffdxf.pas"/>
+        <Caret Line="60" Column="21" TopLine="45"/>
       </Position25>
       <Position26>
-        <Filename Value="umainform.pas"/>
-        <Caret Line="15" Column="28" TopLine="6"/>
+        <Filename Value="..\zcad\commands\uzccommand_copyclip.pas"/>
+        <Caret Line="65" Column="60" TopLine="49"/>
       </Position26>
       <Position27>
-        <Filename Value="..\zengine\fileformats\uzeffdxfsupport.pas"/>
-        <Caret Line="25" Column="3" TopLine="16"/>
+        <Filename Value="..\zengine\fileformats\uzeffdxf.pas"/>
+        <Caret Line="60" Column="10" TopLine="45"/>
       </Position27>
       <Position28>
-        <Filename Value="umainform.pas"/>
-        <Caret Line="16" Column="38" TopLine="7"/>
+        <Filename Value="..\zcad\commands\uzccommand_saveas.pas"/>
+        <Caret Line="55" Column="26" TopLine="39"/>
       </Position28>
       <Position29>
-        <Filename Value="simplecad.lpr"/>
-        <Caret Line="11" Column="7"/>
+        <Filename Value="..\zengine\fileformats\uzeffdxfsupport.pas"/>
+        <Caret Line="171" Column="20" TopLine="156"/>
       </Position29>
       <Position30>
-        <Filename Value="umainform.pas"/>
-        <Caret Line="18" Column="19" TopLine="6"/>
+        <Filename Value="..\zengine\fileformats\uzeffdxfsupport.pas"/>
+        <Caret Line="294" Column="26" TopLine="284"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
